--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
